--- a/src/card/card.css
+++ b/src/card/card.css
@@ -2,6 +2,7 @@
     display: flex; 
     flex-direction: column;
     color: lightblue; 
+    border-radius: 4px;
     border-style: solid;
     border-color: #f0f0f5;
     justify-content: center;
@@ -9,6 +10,7 @@
     .unselected-button {
         background-color: #F8FAFC;
         border: 1px solid #F5F8FD;
+        border-radius: 4px;
         > svg {
             color: #AABAD6;
         }
