--- a/src/app.css
+++ b/src/app.css
@@ -1,10 +1,11 @@
 .axiamatic {
     font-weight: 600;   
     display: flex;
-    height: 100vh;
+    height: 100%;
     flex-direction: column;
     .header-container {
         height: 30%;
+        font-size: 30px;
         display: flex; 
         flex-direction: row; 
         justify-content: space-between;
@@ -18,6 +19,10 @@
         flex-direction: row; 
         justify-content: space-around;
         align-items: center;
+        .selected-products-container {
+            display: table; 
+
+        }
         .product-action-container {
             display: flex; 
             justify-content: space-between;
@@ -26,6 +31,7 @@
                 color: #858589;
                 font-weight: 400; 
                 font-size: 12px;
+                margin-top: 20px;
             }
         }
     }
