--- a/src/pill/pill.css
+++ b/src/pill/pill.css
@@ -8,4 +8,5 @@
     text-align: center;
     color: #FFFFFF;
     background-image: linear-gradient(to top right, #5C6DFF, #C564FF);
+    margin-bottom: 20px;
 }
