--- a/src/product-search/product-search.css
+++ b/src/product-search/product-search.css
@@ -1,20 +1,20 @@
-.dropdown {
-  position: relative;
-  width: 300px;
+.product-selector {
   .search-box {
-    outline: 0px;
     width: 100%;
-    padding: 10px;
-    margin: 5px 0;
+    margin-top: 20px;
+    padding: 10px 0px 10px 10px;
     border: 1px solid #ddd;
     border-radius: 4px;
+    box-sizing: border-box;
+  }
+  > input:focus-visible {
+    outline-color:  #C5D1FD;
   }
   .no-search-text {
     background-color: #EDF2F6;
   }
   .dropdown-menu {
-    position: absolute;
-    width: 100%;
+    margin-top: 20px;
     background-color: #fff;
     border: 1px solid #ddd;
     border-radius: 4px;
@@ -22,18 +22,35 @@
     z-index: 100;
     display: flex; 
     flex-direction: column; 
-    justify-content: space-between;
+    padding: 10px; 
+    position: relative;
     .dropdown-item {
-      padding: 10px;
+      margin-top: 15px;
       cursor: pointer;
       display: flex; 
       align-items: center;
+      padding: 10px; 
+      border-radius: 4px;
       &:last-child {
         border-bottom: none;
       }
-      &:hover,
-      .product-name {
+      .product-info-container {
         margin-left: 10px;
+        display: flex; 
+        justify-content: space-between;
+        align-items: center;
+        padding-right: 5px;
+        flex-grow: 1;
+        > svg {
+          font-size: 12px;
+          color: white; 
+        }
+      }
+      &:first-child { 
+        margin-top: 0px;
+      }
+      &.selected { 
+        background-color: #4B6FFF;
       }
     }
   }
