--- a/src/product-selector.css
+++ b/src/product-selector.css
@@ -32,7 +32,7 @@
                 display: flex; 
                 justify-content: center;
                 width: 60%;
-                flex-grow: 0.45;
+                height: 40%;
                 .card-custom-class {
                     margin-left: 20px;;
                 }
